--- a/styles.css
+++ b/styles.css
@@ -76,9 +76,12 @@ img {
     box-shadow: 0px 0px 20px 1px hsl(150, 100%, 66%);
 }
 
-.divider img{
-    width: auto; 
-    height: 100%;
+.divider { 
+    width: 100%;
+    background-size: 100% 100%;
+    background-color: hsl(218°, 20%, 24%);
+    margin: 20px 0 30px;
+    filter: brightness(0) saturate(100%) invert(48%) sepia(79%) hue-rotate(86deg) contrast(119%);
 }
 
 .attribution { 
