--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
 
 :root {
-    font-size: 28px
+    --light-cyan: hsl(193, 38%, 86%);
+    --neon-green: hsl(150, 100%, 66%);
+    --grayish-blue: hsl(217, 19%, 38%);
+    --dark-grayish-blue: hsl(217, 19%, 24%);
+    --dark-blue: hsl(218, 23%, 16%);
+    --container-padding: 40px 10px 40px 10px;
+
 }
 
 *,
@@ -20,7 +26,7 @@ body {
 
 body {
     font-family: "Manrope", sans-serif;
-    background-color: hsl(217, 19%, 24%);
+    background-color: var(--dark-blue);
     display: flex;
     justify-content: center;
     align-items: center
@@ -35,9 +41,9 @@ img {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    padding: 40px 10px 60px 10px;
+    padding: var(--container-padding);
+    background-color: var(--dark-grayish-blue);
     text-align: center;
-    background-color: hsl(217, 19%, 38%);
     position: relative;
     border-radius: 0.35rem;
     width: 100%;
@@ -51,14 +57,14 @@ img {
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 0.5ch;
-    color: hsl(150, 100%, 66%);
+    color: var(--neon-green);
 }
 
 .container .advice {
     margin-block: 1rem;
-    color: hsl(193, 38%, 86%);
+    color: var(--light-cyan);
     font-size: 28px;
-    padding: 20px;
+    
 }
 
 .container .btn {
@@ -66,22 +72,21 @@ img {
     outline: none;
     padding: 20px;
     border-radius: 50%;
-    background-color: hsl(150, 100%, 66%);
+    background-color: var(--neon-green);
     position: absolute;
     bottom: -32px;
 }
 
 .container .btn:hover {
     cursor: pointer;
-    box-shadow: 0px 0px 20px 1px hsl(150, 100%, 66%);
+    box-shadow: 0px 0px 20px 1px var(--neon-green);
 }
 
-.divider { 
+img .divider { 
     width: 100%;
+    height: 100%;
     background-size: 100% 100%;
-    background-color: hsl(218°, 20%, 24%);
-    margin: 20px 0 30px;
-    filter: brightness(0) saturate(100%) invert(48%) sepia(79%) hue-rotate(86deg) contrast(119%);
+    background-color: var(--dark-blue);
 }
 
 .attribution { 
@@ -98,6 +103,6 @@ img {
 
 @media (min-width: 500px) {
     .container {
-        padding: 40px 25px 60px 25px;
+        padding: var(--container-padding);
     }
 }
