--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@
     --grayish-blue: hsl(217, 19%, 38%);
     --dark-grayish-blue: hsl(217, 19%, 24%);
     --dark-blue: hsl(218, 23%, 16%);
-    --container-padding: 40px 10px 40px 10px;
-
+    --container-padding: 2.5rem 0.625rem 2.5rem 0.625rem;
 }
 
 *,
@@ -50,7 +49,7 @@ img {
     max-width: 500px;
     margin: 0 0.5rem;
     min-height: 300px;
-    box-shadow: 10px 10px 15px 1px rgba(0, 0, 0, 0.26);
+    box-shadow: 10px 10px 15px 1px var(--grayish-blue);
 }
 
 .container .accent {
@@ -94,11 +93,16 @@ img .divider {
     bottom: 0;
     width: 100%;
     height: 2.5rem;
-    font-size: 11px; text-align: center; 
+    font-size: 11px; 
+    color: darkcyan;
+    text-align: center; 
+    border-radius: 0.4rem;
+    box-shadow: 0px 0px 20px 1px var(--neon-green);
   }
   
   .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: cyan;
+     
   }
 
 @media (min-width: 500px) {
